# rustar-aligner

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  ROADMAP.md
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: .gitignore  astro.config.mjs  package.json  pnpm-lock.yaml
docs-old/: phase13_accuracy.md  phase14_starsolo.md  phase15_sam_tags.md  phase16_14_nstart_fix.md  phase16_algorithm.md  phase17_features.md
docs-old/dev/: ALIGNMENT_FIXES.md  BUGFIX_2026-02-09.md  PERFORMANCE_FIX.md  PHASE12_COMPLETE.md  STAR_SA_RESEARCH.md  TESTING_SUMMARY.md
docs-old/star_comparison/: 01_recursive_stitcher.md  02_stitch_align_to_transcript.md  03_extend_align.md  04_seed_window_dp.md  05_mapped_filter.md  DIFFERENCES.md  README.md
docs/src/components/: Header.astro  ThemeToggle.astro
docs/src/content/docs/: index.mdx
docs/src/content/docs/about/: changelog.md  contributing.md  license.md
docs/src/content/docs/getting-started/: installation.md  introduction.md  quick-start.md
docs/src/content/docs/guides/: chimeric.md  genome-index.md  migrating-from-star.md  paired-end.md  quantification.md  single-end.md  two-pass.md
docs/src/content/docs/reference/: cli-parameters.md  output-files.md  performance.md  star-compatibility.md
docs/src/styles/: custom.css
src/: cpu.rs  error.rs  lib.rs  main.rs  mapq.rs  params.rs  stats.rs
src/align/: mod.rs  read_align.rs  score.rs  seed.rs  stitch.rs  transcript.rs
src/chimeric/: detect.rs  mod.rs  output.rs  score.rs  segment.rs
src/genome/: mod.rs
src/index/: io.rs  mod.rs  packed_array.rs  packed_stream.rs  sa_build.rs  sa_index.rs  suffix_array.rs
src/io/: bam.rs  fastq.rs  log.rs  mod.rs  sam.rs
src/junction/: gtf.rs  mod.rs  sj_output.rs  sjdb_insert.rs
src/params/: mod.rs  sam.rs
src/quant/: mod.rs  transcriptome.rs
src/solo/: count.rs  gene.rs  mod.rs  whitelist.rs
test/: Dockerfile.bench  Dockerfile.solodiff  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  STAR_REFERENCE.md  assess_faithfulness.py  ci.sh  compare_chimeric.py  compare_golden.py  compare_junctions.py  compare_pe.py  compare_sam.py  compare_sam_thorough.py  data_setup.sh  debug_star.sh  diagnose_disagreements.py  diff_star_transcriptome.sh  extract_disagreement_reads.py  investigate.sh  run_tests.sh  save_golden.sh  solo_bench.py  solo_cellranger_diff.py  solo_diff_docker.sh  verify_framework.sh
tests/: alignment_features.rs  phase9_threading.rs  transcriptome_sam.rs
