[package]
name = "rustar-aligner"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
authors = ["James Ferguson"]
description = "A Rust reimplementation of STAR (Spliced Transcripts Alignment to a Reference), the RNA-seq aligner"
license = "MIT"
repository = "https://github.com/scverse/rustar-aligner"
readme = "README.md"
keywords = ["bioinformatics", "rna-seq", "aligner", "sequencing", "star"]
categories = ["command-line-utilities", "science"]
exclude = [
    "test/",
    "tests/",
    "docs/",
    ".github/",
    "Dockerfile",
    ".dockerignore",
    "ROADMAP.md",
    "CLAUDE.md",
]

[[bin]]
name = "rustar-aligner"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
memmap2 = "0.9"
byteorder = "1"
noodles = { version = "0.109", features = ["fastq", "sam", "bam", "bgzf"] }
bstr = "1"
flate2 = "1"
rayon = "1"
dashmap = "6"
chrono = "0.4"
rand = "0.10"
tempfile = "3"
caps-sa = { path = "../caps-sa" }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[build-dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }

# Release profile moved to the workspace root (../Cargo.toml) so cargo doesn't
# warn about per-member profile overrides being ignored.
