[package]
name = "rustar-aligner"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
authors = ["James Ferguson"]
description = "A Rust reimplementation of STAR (Spliced Transcripts Alignment to a Reference), the RNA-seq aligner"
license = "MIT"
repository = "https://github.com/scverse/rustar-aligner"
readme = "README.md"
keywords = ["bioinformatics", "rna-seq", "aligner", "sequencing", "star"]
categories = ["command-line-utilities", "science"]
exclude = [
    "test/",
    "tests/",
    "docs/",
    ".github/",
    "Dockerfile",
    ".dockerignore",
    "ROADMAP.md",
    "CLAUDE.md",
]

[[bin]]
name = "rustar-aligner"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
memmap2 = "0.9"
byteorder = "1"
noodles = { version = "0.109", features = ["fastq", "sam", "bam", "bgzf"] }
bstr = "1"
flate2 = "1"
rayon = "1"
dashmap = "6"
chrono = "0.4"
rand = "0.10"
tempfile = "3"
bitflags = { version = "2.11.1", features = ["std"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[build-dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }

# Whole-program LTO + a single codegen unit are worth the extra build time
# for the seed-search and DP-extension inner loops. CI overrides these via
# `CARGO_PROFILE_RELEASE_LTO=thin` / `CODEGEN_UNITS=16` env vars to keep
# test-matrix runtime reasonable.
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
